--- a/braden-walker-portfolio/src/styles/less/articles.less
+++ b/braden-walker-portfolio/src/styles/less/articles.less
@@ -167,14 +167,14 @@
             width: 100%;
             max-width: 350px;
             display: flex;
-            margin: 80px 20px 0;
+            margin: 80px 20px 20px;
             position: relative;
             align-items: center;
             flex-flow: column;
             padding: 30px 30px 30px 30px; //keo
 
             @media @phone {
-                margin: 50px 10px 0px;
+                margin: 50px 10px 40px;
             }
 
             .article-image {
@@ -192,7 +192,6 @@
                 .title {
                     font-size: 2.0rem;
                     font-weight: bold;
-
                     margin-top: 30px;
                 }
 
@@ -204,7 +203,6 @@
                 .date {
                     font-style: italic;
                     font-size: 1.2rem;
-
                     margin-top: 30px;
                     
                 }
@@ -214,14 +212,14 @@
             .links {
                 position: absolute;
                 bottom: -46px;
-                right: 0px;
+                right: -0px;
                 display: flex;
                 z-index: -1;
 
                 .link {
                     #craft > .sticker;
-                    border-bottom-left-radius: 0;
-                    border-bottom-right-radius: 0;
+                    border-top-left-radius: 0;
+                    border-top-right-radius: 0;
                     padding: 20px 10px 10px;
                     width: 100%;
                     display: flex;
